--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://use.typekit.net/gyk8zus.css");
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700');
 @font-face{
   font-family: "iAWriterMono";
   src: url("./fonts/iAWriterMonoS-Regular.woff2") format('woff2');
@@ -16,6 +16,9 @@
 .no-scroll {
   height: 100%;
   overflow: hidden;
+}
+.no-xscroll {
+  overflow-x: hidden;
 }
 .title{
   font-family: "bookmania", sans-serif;
