--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,4 @@
 @import url(App.css);
-@import url(designathon.css);
 .design-challenge {
   padding-top: 132px;
   background-color: #3A86C8;
@@ -249,5 +248,302 @@
       padding-bottom: 24px;
       padding-top: 24px;
       margin: 0px; } }
+
+.designathon {
+  background-image: url("/images/designathon/grid.png");
+  padding-top: 132px;
+  background-color: #C1F0E5;
+  color: #426968; }
+  .designathon a.link {
+    text-decoration: underline;
+    color: #356A69;
+    transition: all 200ms ease; }
+  .designathon a.link:hover {
+    color: #1BB994;
+    transition: all 200ms ease; }
+  .designathon .h1 {
+    font-family: "Mechanical", serif;
+    /* font-weight: 700; */
+    font-style: normal;
+    font-size: 3.6458333333333335vw;
+    letter-spacing: 0.05em; }
+  .designathon .h2 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 36px; }
+  .designathon .h3 {
+    font-family: "Mechanical", serif;
+    /* font-weight: 700; */
+    font-style: normal;
+    font-size: 8vw;
+    letter-spacing: 0.05em; }
+  .designathon .h4 {
+    font-family: "Mechanical", serif;
+    /* font-weight: 700; */
+    font-style: normal;
+    font-size: 33px;
+    letter-spacing: 0.05em; }
+  .designathon .h5 {
+    font-family: "Mechanical", serif;
+    /* font-weight: 700; */
+    font-style: normal;
+    font-size: 18px;
+    letter-spacing: 0.05em; }
+  .designathon .b1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 24px;
+    font-weight: 300;
+    letter-spacing: 0.01em; }
+  .designathon .b2 {
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    letter-spacing: 0.01em; }
+  .designathon .b3 {
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 0.01em; }
+  .designathon .bold {
+    font-weight: 700 !important; }
+  .designathon .semibold {
+    font-weight: 600 !important; }
+  .designathon .poppins {
+    font-family: "Poppins" !important; }
+  .designathon .button {
+    background-color: #C9EDBD;
+    font-family: "Poppins";
+    border: 2.07877px solid #FFFFFF;
+    border-radius: 13px;
+    transition-property: background-color,border-color,color,box-shadow,filter,transform;
+    transition-duration: .3s;
+    cursor: pointer;
+    padding: 12px 43px 12px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 27px;
+    line-height: 40px;
+    text-align: center;
+    color: #426968; }
+  .designathon .button-small {
+    background-color: transparent;
+    font-family: "Poppins";
+    border: 3px solid white;
+    color: white;
+    font-size: 14px;
+    line-height: 1;
+    padding: 8px 24px 8px;
+    border-radius: 45px;
+    transition: all .3s ease; }
+  .designathon .button-small:hover {
+    background-color: white;
+    border: 3px solid white;
+    color: black;
+    font-size: 14px;
+    line-height: 1;
+    padding: 8px 24px 8px;
+    border-radius: 45px; }
+  .designathon .button:hover {
+    background-color: #fff;
+    box-shadow: 0px 15px 20px rgba(179, 179, 179, 0.4);
+    color: #000;
+    transform: translateY(-3px); }
+@keyframes rotate-360 {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(360deg); } }
+  .designathon .rotate {
+    animation: rotate-360 8s linear 0s infinite normal; }
+  .designathon .reverse-rotate {
+    -webkit-animation: rotate-360 4s linear 0s infinite reverse;
+    -moz-animation: rotate-360 4s linear 0s infinite reverse;
+    -ms-animation: rotate-360 4s linear 0s infinite reverse;
+    -o-animation: rotate-360 4s linear 0s infinite reverse;
+    animation: rotate-360 4s linear 0s infinite reverse; }
+  .designathon a.circle-container {
+    color: white; }
+  .designathon .circle-container:hover {
+    transform: scale(1.25); }
+  .designathon .circle-container:hover .reverse-rotate {
+    -webkit-animation-play-state: running;
+    -moz-animation-play-state: running;
+    -ms-animation-play-state: running;
+    -o-animation-play-state: running;
+    animation-play-state: running; }
+  .designathon .circle-container.Illustration {
+    transform: scale(1.15); }
+  .designathon .circle-container.Illustration:hover {
+    transform: scale(1.4375); }
+  .designathon .circle-container {
+    width: 250px;
+    height: 250px;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    transition: all .5s ease;
+    transform-origin: center; }
+  .designathon .emoji {
+    position: relative;
+    transform: translate(-50%, 0);
+    height: 90px; }
+  .designathon .circle-container.Illustration .emoji {
+    height: 72px; }
+  .designathon .hover-reveal {
+    position: fixed;
+    z-index: -2;
+    width: 228px;
+    height: 150px;
+    top: -100%;
+    left: 20%;
+    /* pointer-events: none; */
+    opacity: 0; }
+  .designathon .rainbow-text {
+    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent; }
+  .designathon .header {
+    top: 36px;
+    padding: 0; }
+  .designathon .pointer {
+    pointer-events: none;
+    display: block; }
+  .designathon .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    column-gap: 2vw;
+    row-gap: 2vw;
+    align-items: start;
+    justify-items: center; }
+  .designathon .mentor {
+    max-width: 100%;
+    object-fit: cover;
+    height: 250px;
+    border-radius: 4px;
+    border: 3px solid #fff;
+    transition: all .275s ease;
+    box-shadow: 0px 15px 20px rgba(22, 22, 22, 0.375);
+    transform: translateY(-10px); }
+  .designathon .mentor:hover {
+    box-shadow: 0px 15px 20px rgba(22, 22, 22, 0.175);
+    transform: translateY(-2px); }
+  .designathon .mentor-text {
+    width: 210px; }
+  .designathon .mentor-container {
+    height: auto;
+    width: 250px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: -56px; }
+  .designathon .mentor-container > a:hover {
+    color: initial;
+    background-color: initial;
+    opacity: initial;
+    transition: initial; }
+  .designathon .mentor-category-container {
+    box-shadow: 0px 15px 20px rgba(22, 22, 22, 0.175);
+    background-color: #0F4C81;
+    border-radius: 40px;
+    border: 3px solid #13548d;
+    padding-bottom: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin: 12px; }
+  .designathon .section-1 {
+    padding-top: 96px;
+    height: 100vh; }
+  .designathon .section-2 {
+    background-color: #325C5C;
+    padding-top: 56px;
+    padding-bottom: 72px; }
+  .designathon .section-3 {
+    padding-top: 96px;
+    min-height: 100vh;
+    padding-bottom: 96px; }
+  .designathon .section-3-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-column-gap: 72px; }
+  .designathon .section-4 {
+    background-color: white;
+    padding-top: 56px;
+    padding-bottom: 72px;
+    min-height: 100vh; }
+  .designathon .section-5 {
+    padding-top: 56px;
+    padding-bottom: 56px; }
+  .designathon .judge {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center; }
+  .designathon .judgeCaption {
+    margin-top: 12px; }
+  .designathon .judgeImg {
+    width: 180px;
+    height: auto; }
+  .designathon .judgeImgSmall {
+    width: 100px;
+    height: auto; }
+  .designathon .qText {
+    color: #616161;
+    font-weight: 400;
+    font-size: 18px; }
+  .designathon .textbox-container {
+    /* background-image: url(./textbox.png);
+    background-size: contain;
+    background-repeat: no-repeat; */
+    border: 2px solid #92D4C5;
+    max-height: 0px;
+    animation-name: textbox;
+    animation-duration: 1.2s;
+    animation-timing-function: cubic-bezier(0.57, 0.1, 0.1, 0.9);
+    animation-fill-mode: forwards; }
+  .designathon .textbox-small-container {
+    /* background-image: url(./textbox.png);
+    background-size: contain;
+    background-repeat: no-repeat; */
+    border: 2px solid #92D4C5;
+    max-height: 0px;
+    animation-name: textbox-small;
+    animation-duration: 1.2s;
+    animation-timing-function: cubic-bezier(0.57, 0.1, 0.1, 0.9);
+    animation-fill-mode: forwards; }
+@keyframes textbox {
+  from {
+    max-height: 0px; }
+  to {
+    max-height: 180px; } }
+@keyframes textbox-small {
+  from {
+    max-height: 0px; }
+  to {
+    max-height: 300px; } }
+  .designathon .square {
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    background: #FFFFFF;
+    border: 2px solid #92D4C5; }
+@keyframes slideup {
+  0% {
+    transform: translateY(290px) rotate(20deg); }
+  100% {
+    transform: translateY(0px) rotate(0deg); } }
+  .designathon .animate-slideup {
+    transform: translateY(290px) rotate(15deg);
+    animation: slideup 1000ms cubic-bezier(0.65, 0, 0.35, 1) 1 forwards;
+    animation-delay: 2s;
+    transform-origin: top center; }
+  .designathon .bigGear {
+    left: 83.8%;
+    top: 80%; }
+  .designathon .smallGear {
+    left: 69%;
+    top: 95.8%; }
 
 /*# sourceMappingURL=main.css.map */
