--- a/src/main.css
+++ b/src/main.css
@@ -541,9 +541,15 @@
     transform-origin: top center; }
   .designathon .bigGear {
     left: 83.8%;
-    top: 80%; }
+    top: 603.2px; }
   .designathon .smallGear {
     left: 69%;
-    top: 95.8%; }
+    top: 722.332px; }
+  .designathon .bigGear-2 {
+    left: 82.2%;
+    top: 3204.5px; }
+  .designathon .smallGear-2 {
+    left: 90%;
+    top: 3114.02px; }
 
 /*# sourceMappingURL=main.css.map */
