--- a/src/main.scss
+++ b/src/main.scss
@@ -626,10 +626,18 @@
       }
     .bigGear{
         left: 83.8%;
-        top: 80%;
+        top: 603.2px;
     }
     .smallGear{
         left: 69%;
-        top: 95.8%;
+        top: 722.332px;
+    }
+    .bigGear-2{
+        left: 82.2%;
+        top: 3204.5px;
+    }
+    .smallGear-2{
+        left: 90%;
+        top: 3114.02px;
     }
 }
