--- a/src/main.scss
+++ b/src/main.scss
@@ -595,14 +595,15 @@
       justify-content: space-between;
       align-items: center;
       font-size: 24px;
+      font-family: "Poppins";
     }
     .tablist-small {
         display: flex;
-        width: 70%;
+        width: 75%;
         justify-content: space-between;
         align-items: center;
         font-size: 18px;
-        
+        font-family: "Poppins";
     }
     .tab {
         color: #303030;
