--- a/src/main.scss
+++ b/src/main.scss
@@ -545,6 +545,36 @@
         padding-top: 56px;
         padding-bottom: 56px;
     }
+    .section-6 {
+      background-color: white;
+      color: #426968;
+      padding-top: 56px;
+      padding-bottom: 72px;
+  }
+  .dthonWorkshops {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-column-gap: 36px;
+    grid-row-gap: 36px;
+  }
+  .workshop {
+      // background-color: #D0EBC1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 8px;
+      padding-top: 20px;
+      padding-bottom: 100px;
+      margin-left: 32px;
+      margin-right: 32px;
+      border: 8px solid #C1F0E5;
+      border-radius: 12px;
+  }
+  .workshop-button {
+    position: absolute;
+    bottom: 24px;
+  }
     .judge {
         display: flex;
         flex-direction: column;
