--- a/src/App.css
+++ b/src/App.css
@@ -2253,10 +2253,30 @@ a.event-subtitle{
 }
 
 .button-dark{
-    border: 3px solid black;
-    color: black;
+    border: 3px solid #356A69;
+    color: white;
+    background-color: #356A69;
+    font-family: "Poppins";
+    font-size: 14px;
+    line-height: 6;
+    padding: 8px 24px 8px;
+    border-radius: 45px;
+    transition: all .3s ease;
+    box-shadow: 0 15px 20px hsl(0deg 0% 70% / 40%);
 }
 
 .button-dark:hover{
     border: 3px solid #356A69;
+    background-color: white;
+    color: #356A69;
+    font-size: 14px;
+    line-height: 6;
+    padding: 8px 24px 8px;
+    border-radius: 45px;
+    transition: all .3s ease;
+}
+
+a:hover i.fa-cog{
+  color: #356A69;
+  transition: all .3s ease;
 }
